@@ -16,8 +16,10 @@
 // Neutral (Default) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_NEUD)
+#ifdef _WIN32
 LANGUAGE LANG_NEUTRAL, SUBLANG_DEFAULT
 #pragma code_page(1252)
+#endif //_WIN32
 
 #ifdef APSTUDIO_INVOKED
 /////////////////////////////////////////////////////////////////////////////
@@ -159,7 +161,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,160,181,50,14
 END
 
-IDD_VALUE DIALOG 0, 0, 97, 20
+IDD_VALUE DIALOG  0, 0, 97, 20
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg"
 BEGIN
@@ -885,7 +887,7 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,120,80,50,14
 END
 
-IDD_PROMPT DIALOG 0, 0, 186, 68
+IDD_PROMPT DIALOG  0, 0, 186, 68
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Input Prompt"
 FONT 8, "Ms Shell Dlg 2"
@@ -1020,7 +1022,7 @@ END
 // Menu
 //
 
-RAMWATCH_MENU MENU
+RAMWATCH_MENU MENU 
 BEGIN
     POPUP "File"
     BEGIN
@@ -1048,7 +1050,7 @@ BEGIN
     END
 END
 
-IDR_MENU MENU
+IDR_MENU MENU 
 BEGIN
     POPUP "Game"
     BEGIN
@@ -1073,6 +1075,7 @@ BEGIN
             MENUITEM "Start recording...",          MENU_STARTRECORD
             MENUITEM "Start playback...",           MENU_STARTREPLAY
             MENUITEM "Stop movie",                  MENU_STOPREPLAY, GRAYED
+            MENUITEM "Play from beginning",         ID_MOVIE_PLAYFROMBEGINNING
             MENUITEM SEPARATOR
             MENUITEM "Record AVI...",               MENU_AVI_BEGIN, GRAYED
             MENUITEM "Stop AVI",                    MENU_AVI_END, GRAYED
@@ -1383,7 +1386,7 @@ BEGIN
     END
 END
 
-IDR_MENU_BLITTER_1 MENU
+IDR_MENU_BLITTER_1 MENU 
 BEGIN
     POPUP "Basic\t(DirectDraw 7)"
     BEGIN
@@ -1402,7 +1405,7 @@ BEGIN
     END
 END
 
-IDR_MENU_BLITTER_2 MENU
+IDR_MENU_BLITTER_2 MENU 
 BEGIN
     POPUP "Enhanced\t(Direct3D 7)"
     BEGIN
@@ -1479,7 +1482,7 @@ BEGIN
     END
 END
 
-IDR_MENU_BLITTER_3 MENU
+IDR_MENU_BLITTER_3 MENU 
 BEGIN
     POPUP "SoftFX\t(DirectDraw 7)"
     BEGIN
@@ -1521,7 +1524,7 @@ BEGIN
     END
 END
 
-IDR_MENU_BLITTER_4 MENU
+IDR_MENU_BLITTER_4 MENU 
 BEGIN
     POPUP "Experimental\t(DirectX Graphics 9)"
     BEGIN
@@ -1559,7 +1562,7 @@ BEGIN
     END
 END
 
-IDR_MENU_AUD_PLUGIN_1 MENU
+IDR_MENU_AUD_PLUGIN_1 MENU 
 BEGIN
     POPUP "DirectSound plugin"
     BEGIN
@@ -1573,7 +1576,7 @@ BEGIN
     END
 END
 
-IDR_MENU_AUD_PLUGIN_2 MENU
+IDR_MENU_AUD_PLUGIN_2 MENU 
 BEGIN
     POPUP "XAudio2 plugin"
     BEGIN
@@ -1588,7 +1591,7 @@ BEGIN
     END
 END
 
-IDR_MENU_GAMESEL MENU
+IDR_MENU_GAMESEL MENU 
 BEGIN
     POPUP "Game Selection Menu"
     BEGIN
@@ -1609,7 +1612,7 @@ BEGIN
     END
 END
 
-IDR_MENU_FAVLIST MENU
+IDR_MENU_FAVLIST MENU 
 BEGIN
     POPUP "Favorites Selection Menu"
     BEGIN
@@ -1630,7 +1633,7 @@ BEGIN
     END
 END
 
-LUAWINDOW_MENU MENU
+LUAWINDOW_MENU MENU 
 BEGIN
     POPUP "Console"
     BEGIN
@@ -1796,7 +1799,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO
+GUIDELINES DESIGNINFO 
 BEGIN
     IDD_MHKEYS, DIALOG
     BEGIN
@@ -1811,7 +1814,7 @@ END
 // String Table
 //
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_FIRSTRUN1           "This appears to be the first time you run %s v%.20s.\n\n"
     IDS_FIRSTRUN2           "Please take some time to match the audio/video settings to your system capabilities and personal preferences. If you continue to use and/or distribute this software, you must agree to be bound by the terms of license agreement, which is always accessible via the about dialog.\n\n"
@@ -1821,7 +1824,7 @@ BEGIN
     IDS_CHEAT_STATUS        "Status"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_INPUT_INPUT         "Game input"
     IDS_INPUT_MAPPING       "Mapped to"
@@ -1833,7 +1836,7 @@ BEGIN
     IDS_INPUT_INP_XARCADER  "X-Arcade (right side)"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_INPUT_INP_HOTRODL   "Hot Rod (left side)"
     IDS_INPUT_INP_HOTRODR   "Hot Rod (right side)"
@@ -1844,7 +1847,7 @@ BEGIN
     IDS_DIP_SETTING         "Setting"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_INPSET_MOVENAME     "Move control or press key for %.100hs"
     IDS_INPSET_MOVE         "Move control or press key"
@@ -1853,21 +1856,21 @@ BEGIN
     IDS_MEMCARD_SELECT      "Select new memory card"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_PROGRESS_LOADING    "Loading and initialising %s..."
     IDS_REPLAY_RECORD       "Record Input to File"
     IDS_REPLAY_REPLAY       "Replay Input from File"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ROMS_SELECT_DIR     "Select Directory:"
     IDS_STATE_LOAD          "Load State"
     IDS_STATE_SAVE          "Save State"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_STATE_ACTIVESLOT    "slot %d active"
     IDS_STATE_LOADED        "state loaded"
@@ -1878,7 +1881,7 @@ BEGIN
     IDS_SCRN_NOGAME         "no game loaded"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_NETPLAY_START       "*** Starting netplay: "
     IDS_NETPLAY_START_YOU   "*** You are player %i. "
@@ -1889,13 +1892,13 @@ BEGIN
     IDS_SSHOT_ERROR         "PNG error %1d"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_SOUND_NOVOLUME      "No volume control"
     IDS_SOUND_VOLUMESET     "volume %03i %%"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_DISK_REPLAY         "This input recording"
     IDS_DISK_THIS_REPLAY    "input recording."
@@ -1905,7 +1908,7 @@ BEGIN
     IDS_DISK_FILE_STATE     "%s State Files"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_DISK_SOUND          "sound recording"
     IDS_DISK_THIS_SOUND     "This sound recording"
@@ -1917,12 +1920,12 @@ BEGIN
     IDS_DISK_FILE_PATCH     "%s Patch Files"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_DISK_SAVEREPORT     "Save system information report"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_PLACEHOLDER_LOAD    "Select Skin"
     IDS_GAMELANG_LOAD       "Select game list localisation template"
@@ -1933,7 +1936,7 @@ BEGIN
     IDS_SEL_CPS1            "CPS-1"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_SEL_CPS2            "CPS-2"
     IDS_SEL_CPS3            "CPS-3"
@@ -1953,7 +1956,7 @@ BEGIN
     IDS_SEL_ATARI           "Atari"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_SEL_BOARDTYPE       "Board Type"
     IDS_SEL_BOOTLEG         "Bootleg"
@@ -1966,7 +1969,7 @@ BEGIN
     IDS_SPATH_TITLES        "Titles"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_GAMEINFO_DIALOGTITLE "Game Information"
     IDS_GAMEINFO_INGAME     "In Game"
@@ -1986,7 +1989,7 @@ BEGIN
     IDS_GAMEINFO_HISTORY    "History"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_SPATH_SELECT        "Select"
     IDS_SPATH_VERSUS        "Versus"
@@ -2006,7 +2009,7 @@ BEGIN
     IDS_SPATH_IPS           "IPS"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_SPATH_ICONS         "Icons"
     IDS_SPATH_ARCHIVES      "ZIP Archives"
@@ -2017,7 +2020,7 @@ BEGIN
     IDS_ROMPATH_4           "Path #4"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ROMPATH_5           "Path #5"
     IDS_ROMPATH_6           "Path #6"
@@ -2026,12 +2029,12 @@ BEGIN
     IDS_PRESET_SAVED        "The preset file was saved to %s."
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_IPSMANAGER_TITLE    "IPS Patch Manager"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_GENRE               "Genre"
     IDS_GENRE_HORSHOOT      "Shooter - Horizontal"
@@ -2049,7 +2052,7 @@ BEGIN
     IDS_GENRE_PUZZLE        "Puzzle"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_GENRE_QUIZ          "Quiz"
     IDS_GENRE_SPORTSMISC    "Sports - Misc"
@@ -2060,7 +2063,7 @@ BEGIN
     IDS_GENRE_SHOOT         "Shooter - Other"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_FAMILY              "Family"
     IDS_FAMILY_MSLUG        "Metal Slug"
@@ -2075,7 +2078,7 @@ BEGIN
     IDS_FAMILY_OTHER        "Other"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     1100                    "&Arcade"
     1101                    "&Other..."
@@ -2083,13 +2086,13 @@ BEGIN
     1103                    "Adjust &CPU speed..."
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     1104                    "Load state from active slot (no %d)\tF9"
     1105                    "Save state to active slot (no %d)\tF10"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_ERROR           "Error"
     IDS_ERR_WARNING         "Warning"
@@ -2099,7 +2102,7 @@ BEGIN
     IDS_ERR_LOAD_PROBLEM    "The ROMset exhibits the following problems:"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_LOAD_NODATA     "No data was found, the game will not run!"
     IDS_ERR_LOAD_ESS_MISS   "essential data is missing, the game will not run!"
@@ -2119,7 +2122,7 @@ BEGIN
     IDS_ERR_LOAD_DET_SND    "sound "
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_LOAD_DET_ROM    "ROM "
     IDS_ERR_LOAD_REQUEST    "Error loading %.32hs, requested by %.128s.\nThe emulation will likely suffer problems."
@@ -2127,12 +2130,12 @@ BEGIN
     IDS_ERR_LOAD_DISK_CRC   "CRC mismatch reading %.32hs from %.512s"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_BURN_INIT       "There was a problem starting '%.128s'.\n"
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_UI_NOSUPPORT    "%.32s is not supported by %.32s."
     IDS_ERR_UI_WINDOW       "Couldn't create main window."
@@ -2143,7 +2146,7 @@ BEGIN
     IDS_ERR_UI_FULL_CUSTRES "\n\nThis is not a standard VGA resolution; please make sure it is supported by your video card."
 END
 
-STRINGTABLE
+STRINGTABLE 
 BEGIN
     IDS_ERR_DISK_CREATE     "Error creating "
     IDS_ERR_DISK_LOAD       "Error loading "
